# dojo-tmp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  constify.h  constify.hpp  gcd.hpp  main.cpp  square.h  square.hpp  triangular.hpp  typelist.h  typelist.hpp
